# mc68000-emulator

./: Cargo.toml  LICENSE  README.md  a1.asm  a1_besser.asm  a2.asm
.github/workflows/: ci.yml  release.yml
src/: assembler.rs  cpu.rs  gui.rs  lib.rs  main.rs  main_gui.rs  memory.rs
tests/: integration_test.rs
