[package]
name = "mc68000"
version = "0.2.2"
edition = "2021"
description = "MC68000 CPU Emulator with GUI - Educational Project"
license = "MIT"
repository = "https://github.com/z4roc/mc68000-emulator"
readme = "README.md"
keywords = ["emulator", "mc68000", "cpu", "assembly", "education"]
categories = ["emulators", "development-tools"]

[lib]
name = "mc68000"
path = "src/lib.rs"

[[bin]]
name = "mc68000"
path = "src/main.rs"

[[bin]]
name = "mc68000-gui"
path = "src/main_gui.rs"

[dependencies]
eframe = "0.32.3"
egui = "0.32.3"
env_logger = "0.11.8"
